--- a/.github/workflows/leetcode.yml
+++ b/.github/workflows/leetcode.yml
@@ -8,10 +8,12 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: joshcai/leetcode-sync@v1.5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
-          csrf-token: ${{ secrets.CSRF_TOKEN }}
+          leetcode-csrf-token: ${{ secrets.CSRF_TOKEN }}
